Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54642

Completions stops working after switching a QCompleter from a QFileSystemModel to another model

XMLWordPrintable

    • 9131f6e56139924162778c6c0538dda58d839bbb (qtbase/5.6, 14.7.2016, 5.6.2)

      When a completer is set on a QCombBox and then the model for the completer changes it will stop completion from working. If the completer is recreated then it works fine again.

        1. completer.zip
          878 kB
          Andy Shaw
        2. qtbug54642.zip
          1 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-54642
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes